--- a/Testing02/Testing02.csproj
+++ b/Testing02/Testing02.csproj
@@ -66,16 +66,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CrudHewan.xaml.cs">
+    <Compile Include="Hewan\CrudHewan.xaml.cs">
       <DependentUpon>CrudHewan.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CrudJenisHewan.xaml.cs">
+    <Compile Include="Jenis Hewan\CrudJenisHewan.xaml.cs">
       <DependentUpon>CrudJenisHewan.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CrudProduk.xaml.cs">
+    <Compile Include="Produk\CrudProduk.xaml.cs">
       <DependentUpon>CrudProduk.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CrudUkuranHewan.xaml.cs">
+    <Compile Include="Ukuran Hewan\CrudUkuranHewan.xaml.cs">
       <DependentUpon>CrudUkuranHewan.xaml</DependentUpon>
     </Compile>
     <Compile Include="Produk.xaml.cs">
@@ -93,19 +93,19 @@
     <Compile Include="TestUiDashboardFix.xaml.cs">
       <DependentUpon>TestUiDashboardFix.xaml</DependentUpon>
     </Compile>
-    <Page Include="CrudHewan.xaml">
+    <Page Include="Hewan\CrudHewan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CrudJenisHewan.xaml">
+    <Page Include="Jenis Hewan\CrudJenisHewan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CrudProduk.xaml">
+    <Page Include="Produk\CrudProduk.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CrudUkuranHewan.xaml">
+    <Page Include="Ukuran Hewan\CrudUkuranHewan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -178,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="coba.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Jasa Layanan\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
