--- a/Testing02/Testing02.csproj
+++ b/Testing02/Testing02.csproj
@@ -66,6 +66,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CrudJasaLayanan.xaml.cs">
+      <DependentUpon>CrudJasaLayanan.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Hewan\CrudHewan.xaml.cs">
       <DependentUpon>CrudHewan.xaml</DependentUpon>
     </Compile>
@@ -78,21 +81,25 @@
     <Compile Include="Ukuran Hewan\CrudUkuranHewan.xaml.cs">
       <DependentUpon>CrudUkuranHewan.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Produk.xaml.cs">
+    <Compile Include="Coba-coba\Produk.xaml.cs">
       <DependentUpon>Produk.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TestCrud.xaml.cs">
+    <Compile Include="Coba-coba\TestCrud.xaml.cs">
       <DependentUpon>TestCrud.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TestGambar.xaml.cs">
+    <Compile Include="Coba-coba\TestGambar.xaml.cs">
       <DependentUpon>TestGambar.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TestUIDashboard.xaml.cs">
+    <Compile Include="Coba-coba\TestUIDashboard.xaml.cs">
       <DependentUpon>TestUIDashboard.xaml</DependentUpon>
     </Compile>
     <Compile Include="TestUiDashboardFix.xaml.cs">
       <DependentUpon>TestUiDashboardFix.xaml</DependentUpon>
     </Compile>
+    <Page Include="CrudJasaLayanan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Hewan\CrudHewan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,11 +116,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Learn2.xaml">
+    <Page Include="Coba-coba\Learn2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Coba-coba\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -121,26 +128,26 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Learn2.xaml.cs">
+    <Compile Include="Coba-coba\Learn2.xaml.cs">
       <DependentUpon>Learn2.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Coba-coba\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Produk.xaml">
+    <Page Include="Coba-coba\Produk.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TestCrud.xaml">
+    <Page Include="Coba-coba\TestCrud.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TestGambar.xaml">
+    <Page Include="Coba-coba\TestGambar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TestUIDashboard.xaml">
+    <Page Include="Coba-coba\TestUIDashboard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -176,12 +183,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="coba.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Jasa Layanan\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
